--- a/Javascript-Achievements/Achievements/Style1.css
+++ b/Javascript-Achievements/Achievements/Style1.css
@@ -1,4 +1,2 @@
-table { background-color: #000000; }
 tr { background-color: rgb(255, 255, 255); }
-td { background-color: rgb(116, 110, 110); }
-td { background-color: rgb(255, 255, 255); }
+table { background-color: rgb(000, 000, 000); }
