--- a/JavascriptLessen/materiaal-oefening-menu-main/css/menu.css
+++ b/JavascriptLessen/materiaal-oefening-menu-main/css/menu.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Metrophobic&display=swap');
+
 /* vloeiend scrollen zie: https://www.w3schools.com/howto/howto_css_smooth_scroll.asp  */
 html{
     scroll-behavior: smooth;
@@ -6,6 +9,7 @@ html{
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Metrophobic', sans-serif;
     background-color: thistle;
     font-size: 26px;
 }
@@ -88,6 +92,7 @@ section header {
 }
 
 h1, h2, h4 {
+    font-family: 'Metrophobic', sans-serif;
     color: white;
     text-align: center; 
     text-shadow: 0 0 13px darkslategrey; 
